--- a/app/src/main/res/layout/activity_setup_profile.xml
+++ b/app/src/main/res/layout/activity_setup_profile.xml
@@ -84,6 +84,19 @@
                     android:padding="16dp"
                     android:layout_marginTop="12dp"/>
 
+                <ProgressBar
+                    android:id="@+id/progressbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:indeterminate="true"
+                    android:indeterminateTint="@android:color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <Button
                     android:id="@+id/continue_button"
                     style="@style/DarkButton"
@@ -91,6 +104,8 @@
                     android:layout_height="52dp"
                     android:text="Continue"
                     android:layout_marginTop="24dp"/>
+
+
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
