--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -63,13 +63,13 @@
                 android:id="@+id/currentBalanceValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="₱100.00"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/currentBalanceLabel"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="8dp"/>
+                app:layout_constraintTop_toBottomOf="@id/currentBalanceLabel" />
 
             <EditText
                 android:id="@+id/amountToSendInput"
