--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="purple_start">#A020F0</color>
     <color name="purple_end">#5F2EEA</color>
     <color name="dark">#121212</color>
+    <color name="purple_500">#6200EE</color>
 </resources>
