--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,7 +84,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="20dp"
                             android:layout_marginTop="4dp"
-                            android:text="₱100.00"
+                            android:text=""
                             android:textColor="#FFFFFF"
                             android:textSize="28sp"
                             android:textStyle="bold"
