--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -32,7 +31,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
-
         <TextView
             android:id="@+id/signInText"
             android:layout_width="wrap_content"
@@ -43,7 +41,6 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
             android:text="@string/sign_in_text" />
-
 
         <EditText
             android:id="@+id/email"
@@ -59,49 +56,65 @@
             android:textColorHint="#FFFFFF"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/signInText"
-            tools:layout_editor_absoluteY="110dp"
             android:layout_marginTop="30dp"/>
 
-        <EditText
-            android:id="@+id/password"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/passwordLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:maxLength="15"
-            android:textSize="14sp"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            android:background="@drawable/input_bg"
-            android:padding="16dp"
-            android:drawableStart="@drawable/lock"
-            android:drawablePadding="12dp"
             app:layout_constraintTop_toBottomOf="@id/email"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="#FFFFFF"
+            app:hintEnabled="false">
 
-        <EditText
-            android:id="@+id/confirmPassword"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:maxLength="15"
+                android:textSize="14sp"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:background="@drawable/input_bg"
+                android:padding="16dp"
+                android:drawableStart="@drawable/lock"
+                android:drawablePadding="12dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/confirmPasswordLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
-            android:maxLength="15"
-            android:textSize="14sp"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            android:background="@drawable/input_bg"
-            android:padding="16dp"
-            android:drawableStart="@drawable/lock"
-            android:drawablePadding="12dp"
-            app:layout_constraintTop_toBottomOf="@id/password"
+            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="#FFFFFF"
+            app:hintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"
+                android:maxLength="15"
+                android:textSize="14sp"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#FFFFFF"
+                android:background="@drawable/input_bg"
+                android:padding="16dp"
+                android:drawableStart="@drawable/lock"
+                android:drawablePadding="12dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:id="@+id/termsLayout"
@@ -109,7 +122,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            app:layout_constraintTop_toBottomOf="@id/confirmPassword"
+            app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="12dp">
@@ -124,7 +137,34 @@
                 android:id="@+id/termsText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="I Agree to the Terms and Conditions"
+                android:text="@string/terms_agree_text"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"
+                android:layout_marginStart="8dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/dataPolicyLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toBottomOf="@id/termsLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp">
+
+            <CheckBox
+                android:id="@+id/dataPolicyCheckBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="#FFFFFF"/>
+
+            <TextView
+                android:id="@+id/dataPolicyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/data_policy_agree_text"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 android:layout_marginStart="8dp"/>
@@ -140,7 +180,7 @@
             android:text="CREATE"
             android:textColor="#FFFFFF"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/termsLayout"
+            app:layout_constraintTop_toBottomOf="@id/dataPolicyLayout"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="12dp"/>
 
@@ -152,9 +192,8 @@
             android:indeterminateTint="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/termsLayout"
+            app:layout_constraintTop_toBottomOf="@id/dataPolicyLayout"
             app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
