--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,4 +12,11 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="cornerRadius">12dp</item>
     </style>
+
+    <style name="TermsDialogTheme" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:background">#121212</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="colorAccent">#DDA0FF</item>
+    </style>
 </resources>
