commit - load top up review

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purps_bg"
-    tools:context=".ProfileActivity">
+    tools:context=".profile.ProfileActivity">
 
     <ImageView
         android:id="@+id/backButton"
